# Persistencia-2026.1

./: .gitignore  README.md  divisao_tarefas.txt  hello.py  pyproject.toml
app/: main.py  pyproject.toml
app/core/: config.py  exceptions.py  hasher.py
app/models/: __init__.py  medico.py
app/repositories/: hospital_repository.py
app/routers/: hasher.py  medicos.py
app/schemas/: medico_schema.py
persistencia_2026_1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: carga_inicial.py
