[tool.poetry]
name = "gestao_hospitalar"
version = "0.1.0"
description = "Gestão Hospitalar com Delta Lake"
authors = ["Seu Nome <email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
deltalake = "^0.17.2"
pydantic = "^2.5.0"
pyarrow = "^14.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"