[project]
name = "persistencia-2026-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deltalake>=1.5.0",
    "faker>=40.12.0",
    "fastapi>=0.135.3",
    "pyarrow>=23.0.1",
    "pydantic[email]>=2.12.5",
    "uvicorn>=0.43.0",
    "zipstream-ng>=1.9.0",
]
